# Block-Sparse-Attention

./: FIX_LINKING.md  INSTALL.md  README.md  SAM_QUICKSTART.md  all_results_hdim64_nheads16_bts1_fwd.json  all_results_hdim64_nheads16_bts8_fwd.json  hilbert.ipynb  main.py  notebook.ipynb  out.txt  profile_sam2_image_encoder.py  profile_sam2_video.py  profile_sam3_hf_image_encoder.py  profile_sam_image_encoders.ipynb  pyproject.toml  setup.py  setup.sh  setup_sam.py  setup_sam_fixed.py  test.py
.claude/: settings.json
block_sparse_attn/: __init__.py  attention.py  sam_attention.py
block_sparse_tests/excel/blocksparse/: hdim128_nheads32_bts1_fwd.xlsx  hdim128_nheads32_bts400_fwd.xlsx  hdim128_nheads32_bts8_fwd.xlsx  hdim16_nheads256_bts1_fwd.xlsx  hdim16_nheads4_bts1_fwd.xlsx  hdim16_nheads64_bts1_fwd.xlsx  hdim32_nheads32_bts1_fwd.xlsx  hdim32_nheads32_bts8_fwd.xlsx  hdim64_nheads16_bts1_fwd.xlsx  hdim64_nheads16_bts200_fwd.xlsx  hdim64_nheads16_bts8_fwd.xlsx  (+1 more)
csrc/block_sparse_attn/: flash_api.cpp  flash_api_sam.cpp
cute/: bench_flash_attn.py  bench_stages.py  flash_attn.py  flash_attn_simple.py  gemm.ipynb  gemm_tutorial.md  matmul.py  matmul_simple.py  test_block_sparse.py
doc/: CPP_TECHNIQUES_GUIDE.md  CUSTOM_KERNEL_TUTORIAL.md  FLASH_FWD_KERNEL_EXPLAINED.md  IMPLEMENTATION_GUIDE.md  custom.md  implementation.md
examples/: README.md  __init__.py  benchmark_speedup.py  masks.py  sam_usage_example.py  usage_example.py  vit_masks.py
excel/blocksparse/: hdim64_nheads16_bts1_fwd.xlsx  hdim64_nheads16_bts200_fwd.xlsx  hdim64_nheads16_bts8_fwd.xlsx
(+43 files in other folders)
