[build-system]
requires = [
    "setuptools>=80.9.0",
    "wheel",
    "packaging>=25.0",
    "psutil",
    "ninja>=1.13.0",
    "torch>=2.9.1",
]
build-backend = "setuptools.build_meta"

[project]
name = "block-sparse-attention"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ninja>=1.13.0",
    "openpyxl>=3.1.5",
    "packaging>=25.0",
    "setuptools>=80.9.0",
    "torch>=2.9.1",
]
